[gd_scene load_steps=3 format=3 uid="uid://dw03wnak0pk0h"]

[ext_resource type="Script" uid="uid://d61amngxklq0" path="res://scripts/Joy/cash.gd" id="1_yhpky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yckuo"]
bg_color = Color(0, 0.45, 0.12749998, 1)

[node name="Cash" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhpky")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yckuo")

[node name="DollarAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 0.1
offset_bottom = 5.199997
theme_override_colors/font_color = Color(0.80487, 0.99, 0.6633, 1)
theme_override_colors/font_outline_color = Color(0.0047649564, 0.14758736, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 51
text = "$$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DollarAmount2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 0.1
offset_bottom = 5.199997
theme_override_colors/font_color = Color(0.80487, 0.99, 0.6633, 1)
theme_override_colors/font_outline_color = Color(0.0047649564, 0.14758736, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 51
text = "$$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DollarAmount3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 5.200012
theme_override_colors/font_color = Color(0.80487, 0.99, 0.6633, 1)
theme_override_colors/font_outline_color = Color(0.0047649564, 0.14758736, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 51
text = "$$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DollarAmount4" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 0.15
anchor_bottom = 1.0
offset_bottom = 5.200012
theme_override_colors/font_color = Color(0.80487, 0.99, 0.6633, 1)
theme_override_colors/font_outline_color = Color(0.0047649564, 0.14758736, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 51
text = "$$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.35
anchor_right = 0.6
anchor_bottom = 0.65
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
